Fix toList on stream